--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -25,4 +25,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run scraper
-        run: python scraper.py
+        run: python scraperNacional.py
